--- a/package.json
+++ b/package.json
@@ -9,19 +9,55 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tiptap/extension-code-block-lowlight": "^3.4.3",
+    "@tiptap/extension-color": "^3.4.3",
+    "@tiptap/extension-image": "^3.4.3",
+    "@tiptap/extension-link": "^3.4.3",
+    "@tiptap/extension-mention": "^3.4.3",
+    "@tiptap/extension-placeholder": "^3.4.3",
+    "@tiptap/extension-strike": "^3.4.3",
+    "@tiptap/extension-table": "^3.4.3",
+    "@tiptap/extension-table-cell": "^3.4.3",
+    "@tiptap/extension-table-header": "^3.4.3",
+    "@tiptap/extension-table-row": "^3.4.3",
+    "@tiptap/extension-task-item": "^3.4.3",
+    "@tiptap/extension-task-list": "^3.4.3",
+    "@tiptap/extension-text-align": "^3.4.3",
+    "@tiptap/extension-text-style": "^3.4.3",
+    "@tiptap/extension-typography": "^3.4.3",
+    "@tiptap/extension-underline": "^3.4.3",
+    "@tiptap/react": "^3.4.3",
+    "@tiptap/starter-kit": "^3.4.3",
+    "aws-sdk": "^2.1692.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lowlight": "^3.3.0",
+    "lucide-react": "^0.544.0",
+    "marked": "^16.3.0",
+    "next": "15.5.3",
+    "prosemirror-state": "^1.4.3",
+    "prosemirror-view": "^1.41.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.8",
+    "typescript": "^5"
   }
 }
