--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prosemirror-view": "^1.41.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-joyride": "^2.9.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
